--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,8 +9,14 @@
     </span>
 </nav>
 <br>
-
-<div class="container">
+<style>
+body {
+  background-image: url('https://images.unsplash.com/photo-1430651717504-ebb9e3e6795e?ixid=MXwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NzZ8MTQxNzA2fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
     <h2>Welcome to BugTesters</h2>
 
     <p><h5></h5></p>
