--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,14 @@
   </span>
 </nav>
 <br>
+<style>
+body {
+  background-image: url('https://images.unsplash.com/photo-1476958526483-36efcaa80b1b?ixid=MXwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MTR8MTQxNzA2fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 <div class="container">
 
   <div class="row">
