--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,11 +9,19 @@
     </span>
 </nav>
 <br>
+<style>
+body {
+  background-image: url('https://images.unsplash.com/photo-1460574283810-2aab119d8511?ixid=MXwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8NTF8MTQxNzA2fHxlbnwwfHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
 <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
         <h1>Sign up!</h1>
 
-        {{!-- <p><h5>Don't be a dick, make an account.</h5></p> --}}
+
 
         <!-- signup FORM -->
         <form method="POST" action="/signup" class="signup">
@@ -27,5 +35,12 @@
             </div>
             <button type="submit" class="btn btn-primary btn-lg">Sign up</button>
         </form>
+    </div>
+     <div class="footer">
+      <p>
+        <span>
+          <em>Design By Bug Testers 2021</em>
+        </span>
+      </p>
     </div>
 </div>
