added the new login and sign up form and added some css

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,13 +16,113 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
+h2 {
+    text-align: center;
+}
+
+form {
+    border: 3px solid #f1f1f1;
+    border-radius: 15px;
+    box-shadow: 10px 10px 5px rgb(143, 137, 137);
+    transition: 0.3s;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.76)
+}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
+
 </style>
     <h2>Welcome to BugTesters</h2>
 
     <p><h5></h5></p>
 </div>
 
-<div class="container">
+<br>
+<br>
+<br>
+
+<body>
+
+<h2>Please Login</h2>
+<br>
+
+    <form action="/login" method="POST">
+        <div class="container">
+            <label for="uname"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" class="form-control" name="username">
+
+            <label for="password"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" class="form-control" name="password">
+                
+            <button type="submit" class="btn btn-primary btn-lg">Login</button>
+        </div>
+    </form>
+
+
+{{!-- <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
         <h1>Login</h1>
 
@@ -39,4 +139,4 @@ body {
             <button type="submit" class="btn btn-primary btn-lg">Login</button>
         </form>
     </div>
-</div>
+</div> --}}
