--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,8 +16,108 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
+
+h2 {
+    text-align: center;
+}
+
+form {
+    border: 3px solid #f1f1f1;
+    border-radius: 15px;
+    box-shadow: 10px 10px 5px rgb(143, 137, 137);
+    transition: 0.3s;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.76)
+}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
+
 </style>
-<div class="container">
+
+<br>
+<br>
+<br>
+
+<body>
+
+<h2>Please Create an Account</h2>
+<br>
+
+    <form method="POST" action="/signup" class="signup">
+        <div class="container">
+            <label for="Username"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="username" required>
+
+            <label for="Password"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="password" required>
+                
+            <button type="submit" class="btn btn-primary btn-lg">Create</button>
+        </div>
+    </form>
+
+{{!-- <div class="container">
     <div class="col-sm-6 col-sm-offset-3">
         <h1>Sign up!</h1>
 
@@ -35,12 +135,5 @@ body {
             </div>
             <button type="submit" class="btn btn-primary btn-lg">Sign up</button>
         </form>
-    </div>
-     <div class="footer">
-      <p>
-        <span>
-          <em>Design By Bug Testers 2021</em>
-        </span>
-      </p>
-    </div>
-</div>
+    </div> --}}
+     
